--- a/demo02-Owncloud/docker-compose.yml
+++ b/demo02-Owncloud/docker-compose.yml
@@ -5,7 +5,7 @@ cloud_web:
     - 80:80
     - 443:443
   log_driver: syslog
-  link:
+  links:
     - cloud_engine
   volumes:
     - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
