--- a/demo02-Owncloud/nginx.conf
+++ b/demo02-Owncloud/nginx.conf
@@ -20,7 +20,7 @@ http {
    
     server {
       listen         80;
-      server_name    cloud.domain.com;
+      server_name    example.com;
       return         301 https://$server_name$request_uri;
     }
     server { 
