--- a/demo01-Wordpress/docker-compose.yml
+++ b/demo01-Wordpress/docker-compose.yml
@@ -17,11 +17,15 @@ services:
        - db
      image: wordpress:latest
      ports:
-       - "8000:80"
+       - 80:80
      restart: always
      environment:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_PASSWORD: wordpress
+     volumes:
+       - wp_files:/var/www/html
+
 volumes:
     db_data:
+    wp_files:
 
