--- a/demo02-Owncloud/docker-compose.yml
+++ b/demo02-Owncloud/docker-compose.yml
@@ -1,46 +1,39 @@
-version: '2'
-
-services: 
-  cloud_web:
-    image: nginx
-    restart: always
-    ports:
-      - 80:80
-      - 443:443
-    log_driver: syslog
-    links:
-      - cloud_engine
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./logs:/var/log/nginx
-      - /etc/letsencrypt:/etc/letsencrypt:z
-  cloud_engine:
-    image: owncloud:latest  
-    expose:
-      - "80"
-    volumes:
-      - cloud_files:/var/www/html/data
-      - cloud_config:/var/www/html/config
-    links:
-      - cloud_db
-      - cloud_cache
-  cloud_db:
-    image: mysql:latest
-    expose:
-      - "3306"
-    environment:
-      MYSQL_DATABASE: owncloud
-      MYSQL_USER: owncloud
-      MYSQL_PASSWORD: ezie7ohghes6oon7thii9ohbuiYaimie
-      MYSQL_ROOT_PASSWORD: iechoo1thohcaiTee2lom9Ahsho4cu0p
-    volumes:
-      - cloud_db:/var/lib/mysql
-  cloud_cache:
-    image: redis:latest
-    expose:
-      - "6379"
-
+cloud_web:
+  image: nginx
+  restart: always
+  ports:
+    - 80:80
+    - 443:443
+  log_driver: syslog
+  links:
+    - cloud_engine
   volumes:
-      cloud_db:
-      cloud_files:
-      cloud_config:
+    - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./logs:/var/log/nginx
+    - /etc/letsencrypt:/etc/letsencrypt:z
+cloud_engine:
+  image: owncloud:latest  
+  expose:
+    - "80"
+  volumes:
+    - ./data:/var/www/html/data
+    - ./config:/var/www/html/config
+  links:
+    - cloud_db
+    - cloud_cache
+cloud_db:
+  image: mysql:latest
+  expose:
+    - "3306"
+  environment:
+    MYSQL_DATABASE: owncloud
+    MYSQL_USER: owncloud
+    MYSQL_PASSWORD: ezie7ohghes6oon7thii9ohbuiYaimie
+    MYSQL_ROOT_PASSWORD: iechoo1thohcaiTee2lom9Ahsho4cu0p
+  volumes:
+    - ./mysql:/var/lib/mysql
+cloud_cache:
+  image: redis:latest
+  expose:
+    - "6379"
+
