--- a/demo02-Owncloud/nginx.conf
+++ b/demo02-Owncloud/nginx.conf
@@ -20,13 +20,13 @@ http {
    
     server {
       listen         80;
-      server_name    example.com;
+      server_name    cloud.meetup-docker.opsnotice.xyz;
       return         301 https://$server_name$request_uri;
     }
     server { 
       listen 443 ssl http2;
-  ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/cloud.meetup-docker.opsnotice.xyz/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/cloud.meetup-docker.opsnotice.xyz/privkey.pem;
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:50m;
   ssl_session_tickets off;
@@ -35,7 +35,7 @@ http {
   ssl_prefer_server_ciphers on;
   ssl_stapling on;
   ssl_stapling_verify on;
-  ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
+  ssl_trusted_certificate /etc/letsencrypt/live/cloud.meetup-docker.opsnotice.xyz/chain.pem;
       resolver 8.8.8.8 8.8.4.4 valid=86400;
       root /var/www/html;
       index index.php;
